[package]
name = "titan-cli"
version = "1.0.0"
edition = "2021"
authors = ["Titan Protocol Engineering <titan@protocol.io>"]
description = "🔱 TITAN-CLI: The Operator Console - Unified CLI for Titan Protocol Ecosystem"
license = "MIT"
repository = "https://github.com/DaviBonetto/TITAN-CLI-L5-Terminal-Commander"
keywords = ["cli", "titan", "protocol", "terminal", "commander"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "titan"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }

# Async Runtime
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "macros"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal UX
colored = "2.1"
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Utilities
dotenv = "0.15"
chrono = "0.4"
dirs = "5.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
